--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Lasagna</title>
 
-    </head>
-    <body>
-        <h1>Lasagna</h1>
-        <a href="../index.html">Home</a>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Lasagna</title>
+
+</head>
+
+<body>
+    <h1>Lasagna</h1>
+    <p><a href="../index.html">Home</a></p>
+    <img src="https://www.shutterstock.com/image-photo/lasagna-basil-fresh-salad-600nw-2516476157.jpg"
+        alt="image of a lasagna">
+    <p>Delicious lasagna recipe</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>12 lasagna noodles uncooked</li>
+        <li>4 cups shredded mozzarella cheese divided</li>
+        <li>½ cup shredded Parmesan cheese shredded and divided</li>
+        <li>¾ teaspoon salt more to taste</li>
+    </ul>
+    <h4>Tomato Sauce</h4>
+    <ul>
+        <li>½ pound lean ground beef</li>
+        <li>½ pound Italian sausage</li>
+        <li>1 yellow onion diced</li>
+        <li>2 cloves garlic minced</li>
+        <li>36 ounces pasta sauce *see note</li>
+        <li>2 tablespoons tomato paste▢1 teaspoon Italian seasoning</li>
+    </ul>
+    <h4>Cheese mixture</h4>
+    <ul>
+        <li>2 cups ricotta cheese or cottage cheese</li>
+        <li>¼ cup chopped fresh parsley</li>
+        <li>1 large egg beaten</li>
+    </ul>
+    <h3>Preparing</h3>
+    <ol>
+        <li>Preheat the oven to 350°F. Bring a large pot of salted water to a boil. Add the lasagna noodles and cook
+            until al dente (firm) according to package directions. Drain, rinse under cold water, and set aside.</li>
+        <li>Meanwhile, in a large skillet or Dutch oven, brown the beef, sausage, onion, and garlic over medium-high
+            heat until no pink remains. Drain any fat.</li>
+        <li>Stir in the pasta sauce, tomato paste, Italian seasoning, ½ teaspoon of salt, and ¼ teaspoon of black
+            pepper. Simmer uncovered over medium heat for 5 minutes or until slightly thickened. Taste and season with
+            additional salt if desired.</li>
+        <li>In a separate medium bowl, combine 1 ½ cups mozzarella cheese, ¼ cup parmesan cheese, ricotta, parsley, egg,
+            and ¼ teaspoon salt.</li>
+        <li>Spread 1 cup of the meat sauce in a 9×13 pan or casserole dish. Top it with 3 lasagna noodles. Layer with ⅓
+            of the ricotta cheese mixture and 1 cup of meat sauce. Repeat twice more. Finish with 3 noodles topped with
+            remaining sauce.</li>
+        <li>Cover with foil and bake for 45 minutes. </li>
+        <li>Remove the foil and sprinkle the top of the lasagna with the remaining 2 ½ cups mozzarella cheese and ¼ cup
+            parmesan cheese. Bake uncovered for an additional 15 minutes or until browned and bubbly. Broil for 2-3
+            minutes if desired.</li>
+        <li>Rest for at least 15 minutes before cutting.</li>
+    </ol>
+</body>
+
 </html>
