--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/omlette.html">Omlette</a></li>
+    </ul>
 </body>
 </html>
