--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,7 +11,7 @@
     <h1>Lasagna</h1>
     <p><a href="../index.html">Home</a></p>
     <img src="https://www.shutterstock.com/image-photo/lasagna-basil-fresh-salad-600nw-2516476157.jpg"
-        alt="image of a lasagna">
+        alt="image of a lasagna" height="400">
     <p>Delicious lasagna recipe</p>
     <h3>Ingredients</h3>
     <ul>
