--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin recipes</h1>
     <ul>
     <li><a href="recipes/lasagna.html">Lasagna</a></li>
     <li><a href="recipes/omlette.html">Omlette</a></li>
+    <li><a href="recipes/carbonara.html">Carbonara</a></li>
     </ul>
 </body>
 </html>
