playing with css basics

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Lasagna</title>
-
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
     <p><a href="../index.html">Home</a></p>
     <img src="https://www.shutterstock.com/image-photo/lasagna-basil-fresh-salad-600nw-2516476157.jpg"
         alt="image of a lasagna" height="400">
-    <p>Delicious lasagna recipe</p>
+    <p class="short-description">Delicious lasagna recipe</p>
     <h3>Ingredients</h3>
     <ul>
         <li>12 lasagna noodles uncooked</li>
